--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/deppbrazil/npm/issues"
   },
-  "homepage": "https://github.com/deppbrazil/npm#readme"
+  "homepage": "https://github.com/deppbrazil/npm#readme",
+  "dependencies": {
+    "bootstrap": "^3.3.7"
+  },
+  "devDependencies": {}
 }
